Fonts and colors

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,7 +2,8 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
+    font-family: $heading-font-family;
+    border-top: 2px solid $grey-color-light;
     border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
 
