--- a/css/main.scss
+++ b/css/main.scss
@@ -6,16 +6,17 @@
 
 
 // Our variables
-$base-font-family: Helvetica, Arial, sans-serif;
+$base-font-family: "PT Sans", Helvetica, Arial, sans-serif;
+$heading-font-family: "Trebuchet MS", "PT Sans", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$text-color:       #314238;
+$background-color: #fcfcfc;
+$brand-color:      #5270a7;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
