--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -162,12 +162,17 @@
 /**
  * Page content
  */
+.hero {
+    margin: 14px 0px 14px
+}
+
 .page-content {
     padding: $spacing-unit 0;
 }
 
 .page-heading {
     font-size: 20px;
+    padding: 10px 0px 0px;
 }
 
 .post-list {
@@ -175,7 +180,7 @@
     list-style: none;
 
     > li {
-        margin-bottom: $spacing-unit;
+        margin-bottom: $spacing-unit / 2;
     }
 }
 
@@ -187,6 +192,25 @@
 .post-link {
     display: block;
     font-size: 24px;
+}
+
+.recent-post-meta {
+    font-size: $small-font-size;
+    color: $grey-color;
+}
+
+.recent-post-link {
+    display: block;
+    font-size: $base-font-size;
+}
+
+.recent-post-list {
+    margin-left: 0;
+    list-style: none;
+
+    > li {
+        margin-bottom: $spacing-unit / 3;
+    }    
 }
 
 
