--- a/css/main.scss
+++ b/css/main.scss
@@ -18,7 +18,7 @@ $text-color:       #314238;
 $background-color: #fcfcfc;
 $brand-color:      #5270a7;
 
-$grey-color:       #828282;
+$grey-color:       #7D8380;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
