Page header margins

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -28,14 +28,18 @@ body {
 /**
  * Set `margin-bottom` to maintain vertical rhythm
  */
-h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-    margin-bottom: $spacing-unit / 3;
+    margin-bottom: $spacing-unit * 0.5;
 }
 
-
+h1 {
+    padding-bottom: 3px;
+    margin-top: $spacing-unit * 0.25;
+    margin-bottom: $spacing-unit * 0.7;
+    border-bottom: 1px dotted $grey-color-light;
+}
 
 /**
  * Images
@@ -112,7 +116,7 @@ blockquote {
     border-left: 4px solid $grey-color-light;
     padding-left: $spacing-unit / 2;
     font-size: 18px;
-    letter-spacing: -1px;
+    letter-spacing: -0.5px;
     font-style: italic;
 
     > :last-child {
@@ -134,7 +138,7 @@ code {
 }
 
 code {
-    padding: 1px 5px;
+    padding: 1px 1px;
 }
 
 pre {
