--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -180,7 +180,11 @@
     list-style: none;
 
     > li {
-        margin-bottom: $spacing-unit / 2;
+        margin-bottom: $spacing-unit * 0.3;
+    }
+
+    h2 {
+        margin-top: -2px;
     }
 }
 
@@ -210,7 +214,11 @@
 
     > li {
         margin-bottom: $spacing-unit / 3;
-    }    
+    }
+
+    h2 {
+        margin-top: -2px;
+    }
 }
 
 
@@ -219,16 +227,16 @@
  * Posts
  */
 .post-header {
-    margin-bottom: $spacing-unit;
+    margin-bottom: $spacing-unit * 0.5;
 }
 
 .post-title {
-    font-size: 42px;
+    font-size: $base-font-size * 2.4;
     letter-spacing: -1px;
     line-height: 1;
 
     @include media-query($on-laptop) {
-        font-size: 36px;
+        font-size: $base-font-size * 2.4;
     }
 }
 
@@ -257,5 +265,40 @@
         @include media-query($on-laptop) {
             font-size: 18px;
         }
+    }
+}
+
+.page-post-content {
+    margin-bottom: $spacing-unit;
+
+    h2 {
+        margin-top: $spacing-unit * 0.5;
+        font-size: 32px;
+
+        @include media-query($on-laptop) {
+            font-size: 28px;
+        }
+    }
+
+    h3 {
+        margin-top: $spacing-unit * 0.4;
+        font-size: 26px;
+
+        @include media-query($on-laptop) {
+            font-size: 22px;
+        }
+    }
+
+    h4 {
+        margin-top: $spacing-unit * 0.3;
+        font-size: 20px;
+
+        @include media-query($on-laptop) {
+            font-size: 18px;
+        }
+    }
+
+    h5, h6 {
+        margin-top: $spacing-unit * 0.2;
     }
 }
