--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -243,6 +243,10 @@
 .post-content {
     margin-bottom: $spacing-unit;
 
+    h1, h2, h3, h4, h5, h6 {
+        color: $heading-text-color;
+    }
+
     h2 {
         font-size: 32px;
 
