--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,7 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #314238;
+$heading-text-color: lighten($text-color, 18%);
 $background-color: #fcfcfc;
 $brand-color:      #5270a7;
 
