Image caption css

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -306,3 +306,19 @@
         margin-top: $spacing-unit * 0.2;
     }
 }
+
+/**
+ * Captions
+ */
+.caption-wrapper {
+    padding: 5px;
+    background: $grey-color-light;
+    margin-bottom: 15px;
+}
+
+.caption-text {
+    text-align: center;
+    color: $grey-color;
+    font-size: $base-font-size * 0.8;
+    line-height: $base-font-size * 1.8;
+}
