Fix code background color for backticks

--- a/css/main.scss
+++ b/css/main.scss
@@ -18,6 +18,7 @@ $text-color:       #314238;
 $heading-text-color: lighten($text-color, 18%);
 $background-color: #fcfcfc;
 $brand-color:      #5270a7;
+$code-color:       #eef;
 
 $grey-color:       #7D8380;
 $grey-color-light: lighten($grey-color, 40%);
