--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -134,7 +134,7 @@ code {
     font-size: 15px;
     border: 1px solid $grey-color-light;
     border-radius: 3px;
-    background-color: #eef;
+    background-color: $code-color;
 }
 
 code {
