Change hover color

--- a/css/main.scss
+++ b/css/main.scss
@@ -17,7 +17,7 @@ $spacing-unit:     30px;
 $text-color:       #314238;
 $heading-text-color: lighten($text-color, 18%);
 $background-color: #fcfcfc;
-$brand-color:      #5270a7;
+$brand-color:      #2964d1;
 $code-color:       #eef;
 
 $grey-color:       #7D8380;
