Sitewide style redesign

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,7 +17,7 @@ body {
     font-family: $base-font-family;
     font-size: $base-font-size;
     line-height: $base-line-height;
-    font-weight: 300;
+    font-weight: 350;
     color: $text-color;
     background-color: $background-color;
     -webkit-text-size-adjust: 100%;
@@ -132,18 +132,21 @@ blockquote {
 pre,
 code {
     font-size: 15px;
-    border: 1px solid $grey-color-light;
+    border: 1px dotted $grey-color-light;
     border-radius: 3px;
     background-color: $code-color;
+    @include media-query($on-palm) {
+        font-size: 12px;
+    }
 }
 
 code {
-    padding: 1px 1px;
+    padding: 1px 3px;
 }
 
 pre {
     padding: 8px 12px;
-    overflow-x: scroll;
+    overflow-x: auto;
 
     > code {
         border: 0;
