--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,14 +4,16 @@
 .site-header {
     font-family: $heading-font-family;
     border-top: 2px solid $grey-color-light;
-    border-bottom: 1px solid $grey-color-light;
+    border-bottom: 0px solid $grey-color-light;
     min-height: 56px;
+    color: $heading-text-color;
 
     // Positioning context for the mobile navigation icon
     position: relative;
 }
 
 .site-title {
+    font-family: "Trebuchet MS";
     font-size: 26px;
     line-height: 56px;
     letter-spacing: -1px;
@@ -20,7 +22,7 @@
 
     &,
     &:visited {
-        color: $grey-color-dark;
+        color: $text-color;
     }
 }
 
@@ -98,7 +100,9 @@
 }
 
 .footer-heading {
+    font-family: "Trebuchet MS";
     font-size: 18px;
+    letter-spacing: -1px;
     margin-bottom: $spacing-unit / 2;
 }
 
@@ -163,7 +167,7 @@
  * Page content
  */
 .hero {
-    margin: 14px 0px 14px
+    margin: 14px 0px 34px
 }
 
 .page-content {
@@ -180,7 +184,7 @@
     list-style: none;
 
     > li {
-        margin-bottom: $spacing-unit * 0.3;
+        margin-bottom: $spacing-unit * 0.5;
     }
 
     h2 {
@@ -209,15 +213,16 @@
 }
 
 .recent-post-list {
+    margin-top: 4px;
     margin-left: 0;
     list-style: none;
 
     > li {
-        margin-bottom: $spacing-unit / 3;
+        margin-bottom: $spacing-unit * 0.5;
     }
 
     h2 {
-        margin-top: -2px;
+        margin-top: -1px;
     }
 }
 
@@ -245,6 +250,8 @@
 
     h1, h2, h3, h4, h5, h6 {
         color: $heading-text-color;
+        margin-top: $spacing-unit * 0.7;
+        margin-bottom: $spacing-unit * 0.3;
     }
 
     h2 {
@@ -276,7 +283,7 @@
     margin-bottom: $spacing-unit;
 
     h2 {
-        margin-top: $spacing-unit * 0.5;
+        margin-top: $spacing-unit * 1.0;
         font-size: 32px;
 
         @include media-query($on-laptop) {
