--- a/css/main.scss
+++ b/css/main.scss
@@ -6,21 +6,21 @@
 
 
 // Our variables
-$base-font-family: "PT Sans", Helvetica, Arial, sans-serif;
-$heading-font-family: "Trebuchet MS", "PT Sans", Helvetica, Arial, sans-serif;
+$base-font-family: "Work Sans", Helvetica, Arial, sans-serif;
+$heading-font-family: "Work Sans", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
-$base-line-height: 1.5;
+$base-line-height: 1.6;
 
 $spacing-unit:     30px;
 
-$text-color:       #314238;
-$heading-text-color: lighten($text-color, 18%);
-$background-color: #fcfcfc;
-$brand-color:      #2964d1;
-$code-color:       #eef;
+$text-color:       #653e2a;
+$heading-text-color: lighten($text-color, 14%);
+$background-color: #ffe7dc;
+$brand-color:      #e19f2c;
+$code-color:       #ffeee8;
 
-$grey-color:       #7D8380;
+$grey-color:       #9e5941;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
