--- a/css/main.scss
+++ b/css/main.scss
@@ -16,7 +16,7 @@ $spacing-unit:     30px;
 
 $text-color:       #653e2a;
 $heading-text-color: lighten($text-color, 14%);
-$background-color: #ffe7dc;
+$background-color: #ffebdc;
 $brand-color:      #e19f2c;
 $code-color:       #ffeee8;
 
