center images in caption wrapper

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -318,6 +318,10 @@
  * Captions
  */
 .caption-wrapper {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     padding: 5px;
     background: $grey-color-light;
     margin-bottom: 15px;
@@ -327,5 +331,5 @@
     text-align: center;
     color: $grey-color;
     font-size: $base-font-size * 0.8;
-    line-height: $base-font-size * 1.8;
+    line-height: $base-font-size * 1.2;
 }
