--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,10 @@
   {% if page.layout == 'post' %}
     <meta property="og:article:published_time" content="{{ page.date | date_to_xmlschema }}" />
   {% endif %}
-
+  {% if page.image %}
+    <meta property="og:image" content="{{ site.url }}{{ page.image }}" />
+  {% endif %}
+  
   <link href='https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;350;400;600' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
