Fix line heights for headings

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -249,9 +249,10 @@
     margin-bottom: $spacing-unit;
 
     h1, h2, h3, h4, h5, h6 {
+        line-height: $base-line-height * 0.7;
         color: $heading-text-color;
-        margin-top: $spacing-unit * 0.7;
-        margin-bottom: $spacing-unit * 0.3;
+        margin-top: $spacing-unit * 0.9;
+        margin-bottom: $spacing-unit * 0.4;
     }
 
     h2 {
