Adjust caption layout

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -326,6 +326,7 @@
     padding: 5px;
     background: $grey-color-light;
     margin-bottom: 15px;
+    padding-top: 8px;
 }
 
 .caption-text {
@@ -333,4 +334,5 @@
     color: $grey-color;
     font-size: $base-font-size * 0.8;
     line-height: $base-font-size * 1.2;
+    margin-top: 6px;
 }
