Increase bottom margin

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -325,7 +325,7 @@
     align-items: center;
     padding: 5px;
     background: $grey-color-light;
-    margin-bottom: 15px;
+    margin-bottom: $spacing-unit * 1.1;
     padding-top: 8px;
 }
 
