Code block layout font size and line spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -336,3 +336,14 @@
     line-height: $base-font-size * 1.2;
     margin-top: 6px;
 }
+
+/**
+ * Code blocks 
+ */
+.highlight {
+    font-size: $codeblock-font-size;
+    line-height: $base-line-height * 0.92;
+    @include media-query($on-palm) {
+        font-size: $codeblock-font-size * 0.9;
+    }
+}
