--- a/css/main.scss
+++ b/css/main.scss
@@ -10,6 +10,7 @@ $base-font-family: "Work Sans", Helvetica, Arial, sans-serif;
 $heading-font-family: "Work Sans", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
+$codeblock-font-size:  $base-font-size * 0.86;
 $base-line-height: 1.6;
 
 $spacing-unit:     30px;
