--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -255,6 +255,14 @@
         margin-bottom: $spacing-unit * 0.4;
     }
 
+    h1 {
+        font-size: 36px;
+
+        @include media-query($on-laptop) {
+            font-size: 32px;
+        }
+    }
+
     h2 {
         font-size: 32px;
 
