Table layout for markdown tables

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -286,6 +286,28 @@
             font-size: 18px;
         }
     }
+
+    table {
+        margin-top: $spacing-unit * 0.6;
+        margin-bottom: $spacing-unit * 0.6;
+        padding: $spacing-unit * 0.4;
+        border-spacing: 0;
+        border: 1px dotted $grey-color-light;
+        background-color: $code-color;
+
+        tr:nth-child(even) {
+            background-color: $background-color;
+        }
+
+        th, td {
+            padding-left: $spacing-unit * 0.2;
+            padding-right: $spacing-unit * 0.4;
+        }
+        td {
+            padding-top: $spacing-unit * 0.2;
+            padding-bottom: $spacing-unit * 0.2;
+        }
+    }
 }
 
 .page-post-content {
