--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -212,6 +212,11 @@
     font-size: $base-font-size;
 }
 
+.recent-post-all {
+    display: block;
+    font-size: $small-font-size;
+}
+
 .recent-post-list {
     margin-top: 4px;
     margin-left: 0;
