add tag list to blog

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -192,6 +192,13 @@
     }
 }
 
+.tag-list {
+    margin-top: 20px;
+    margin-left: 0;
+    list-style: none;
+    display: inline-block;
+}
+
 .post-meta {
     font-size: $small-font-size;
     color: $grey-color;
@@ -199,7 +206,12 @@
 
 .post-link {
     display: block;
-    font-size: 24px;
+    font-size: $base-font-size * 1.4;
+}
+
+.tag-link {
+    display: inline-block;
+    font-size: $small-font-size;
 }
 
 .recent-post-meta {
