--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -19,4 +19,8 @@ header: false
     </li>
   {% endfor %}
   </ul>
+
+  <h4>
+    <a href="{{ site.baseurl }}/blog/tags/{{ page.tag }}/feed.xml">Tag RSS Feed</a>
+  </h4>
 </div>
