--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -128,6 +128,15 @@ blockquote {
 
 
 /**
+ * Horizontal rules
+ */
+hr {
+    border: none;
+    border-top: 1px solid $text-color;
+    margin: $spacing-unit 0;
+}
+
+/**
  * Code formatting
  */
 pre,
