--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,13 @@
   {% if page.image %}
     <meta property="og:image" content="{{ site.url }}{{ page.image }}" />
   {% endif %}
-  
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
+  {% if page.image %}
+    <meta name="twitter:image" content="{{ site.url }}{{ page.image }}" />
+  {% endif %}
+
   <link href='https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;350;400;600' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
